# anomaly-detection-system

./: .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml  test_ray_serve.py  train.ipynb
dashboard/: grafana_dashboard.json
docs/: 00-domain-context.md  01-requirements.md  02-capacity-estimation.md  03-api-design.md  04-high-level-design.md
load_tests/: locustfile.py
manifests/argocd/: app-minikube.yaml  kustomization.yaml  project.yaml
manifests/base/: kustomization.yaml
manifests/base/istio/: authorization-policy.yaml  destination-rule.yaml  gateway.yaml  kustomization.yaml  peer-authentication.yaml  request-authentication.yaml  virtual-service.yaml
manifests/base/kserve/: hpa.yaml  inference-service.yaml  kustomization.yaml  service-monitor.yaml  serving-runtime.yaml
manifests/base/minio-mlflow/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
manifests/base/mlflow/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
manifests/base/namespace/: namespace.yaml
manifests/base/postgres-mlflow/: configmap.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
manifests/base/rabbitmq/: conf-configmap.yaml  configmap.yaml  headless-service.yaml  kustomization.yaml  plugins-configmap.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
manifests/base/ray-serve/: app-configmap.yaml  configmap.yaml  (+8 more)
scripts/: 0-install-dependencies.sh  1-config-cluster.sh  cleanup.sh  install.sh  minikube.sh  start-port-forwards.sh
(+29 files in other folders)
