[project]
name = "anomaly-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "ipykernel>=7.1.0",
    "mlflow==3.6.0",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "locust>=2.42.6",
]
